--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2024.1.1"
 }
 
+
+repositories {
+  maven { url 'https://jitpack.io' }
+}
+
+
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
@@ -52,6 +58,8 @@ def includeDesktopSupport = true
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
+
+    implementation 'com.github.shueja:Monologue:v1.0.0-alpha2'
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
