--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,4 +35,5 @@ jobs:
     - run: pwd
     - run: ls -la
     - name: Execute Gradle build
-      run: ./gradlew -i build
+      run: ./gradlew -i build/classes/
+    -run: ls -laR b
