--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,5 +35,5 @@ jobs:
     - run: pwd
     - run: ls -la
     - name: Execute Gradle build
-      run: ./gradlew -i build/classes/
-    -run: ls -laR b
+      run: ./gradlew -i build
+    - run: ls -laR build/classes/
